--- a/src/PrivateAdmin/src/app/administration/invites/modals/refresh-cache-modal/refresh-cache-modal.component.html
+++ b/src/PrivateAdmin/src/app/administration/invites/modals/refresh-cache-modal/refresh-cache-modal.component.html
@@ -12,7 +12,7 @@ Data byla úspěšně obnovena.
         <tbody>
             <tr *ngFor="let item of report">
                 <td>{{item.key}}</td>
-                <td>{{item.value.toLocaleString()}}</td>
+                <td>{{item.value | numberWithSpaces}}</td>
             </tr>
         </tbody>
     </table>
