--- a/src/PrivateAdmin/src/app/administration/emotes/emote-users-list/emote-users-list.component.html
+++ b/src/PrivateAdmin/src/app/administration/emotes/emote-users-list/emote-users-list.component.html
@@ -24,7 +24,7 @@
                             <td>
                                 <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a>
                             </td>
-                            <td>{{item.useCount.toLocaleString()}}</td>
+                            <td>{{item.useCount | numberWithSpaces}}</td>
                             <td>{{item.firstOccurence.binding}}</td>
                             <td>{{item.lastOccurence.binding}}</td>
                         </tr>
