--- a/src/PrivateAdmin/src/app/administration/invites/invites-list/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/invites/invites-list/list/list.component.html
@@ -18,7 +18,7 @@
                     <td>
                         <a routerLink="/admin/users" [queryParams]="{usedInviteCode: item.code}" class="text-dark">{{item.code}}</a>
                     </td>
-                    <td>{{item.createdAt?.toLocaleString()}}</td>
+                    <td>{{item.createdAt?.binding}}</td>
                     <td>
                         <a routerLink="/admin/users/{{item.creator.id}}" class="text-dark" *ngIf="item.creator">{{item.creator.username}}</a>
                     </td>
