Global alias support

--- a/src/PrivateAdmin/src/app/administration/audit-log/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/list/list.component.html
@@ -63,7 +63,7 @@
             <p *ngIf="item.user" class="m-0">
                 Provedl:
                 <b>
-                    <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.username}}</a>
+                    <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.displayName}}</a>
                 </b>
             </p>
         </div>
