--- a/src/PrivateAdmin/src/app/administration/channels/channel-detail/channel-detail.component.html
+++ b/src/PrivateAdmin/src/app/administration/channels/channel-detail/channel-detail.component.html
@@ -23,13 +23,15 @@
                     <div class="col-md-3" *ngIf="data.lastMessageFrom">
                         Poslední zpráva od<br>
                         <b>
-                            <a routerLink="/admin/users/{{data.lastMessageFrom.id}}" class="text-dark">{{data.lastMessageFrom.username}}</a>
+                            <a routerLink="/admin/users/{{data.lastMessageFrom.id}}"
+                                class="text-dark">{{data.lastMessageFrom.displayName}}</a>
                         </b>
                     </div>
                     <div class="col-md-3" *ngIf="data.mostActiveUser">
                         Nejaktivnější uživatel<br>
                         <b>
-                            <a routerLink="/admin/users/{{data.mostActiveUser.id}}" class="text-dark">{{data.mostActiveUser.username}}</a>
+                            <a routerLink="/admin/users/{{data.mostActiveUser.id}}"
+                                class="text-dark">{{data.mostActiveUser.displayName}}</a>
                         </b>
                     </div>
                     <div *ngIf="data.parentChannel" class="col-md-3">
