--- a/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/list/list.component.html
@@ -22,7 +22,7 @@
                     <td>{{item.createdAt.binding}}</td>
                     <td>
                         <a routerLink="/admin/users/{{item.fromUser.id}}" class="text-dark"
-                            (click)="$event.stopPropagation()">{{item.fromUser.username}}</a>
+                            (click)="$event.stopPropagation()">{{item.fromUser.displayName}}</a>
                     </td>
                     <td>{{item.emoteName}}</td>
                     <td>
