--- a/src/PrivateAdmin/src/app/administration/points/transactions/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/points/transactions/list/list.component.html
@@ -24,7 +24,7 @@
                         <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a>
                     </td>
                     <td>
-                        <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.username}}</a>
+                        <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.displayName}}</a>
                     </td>
                     <td>{{item.createdAt.binding}}</td>
                     <td>{{item.messageId}}</td>
