Added info about forwarded IP

--- a/src/PrivateAdmin/src/app/administration/audit-log/detail-modal/detail-modal.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/detail-modal/detail-modal.component.html
@@ -599,7 +599,8 @@
 
     <tr>
         <td>IP adresa</td>
-        <td>{{data.ip}}</td>
+        <td *ngIf="data.forwardedIp">{{data.ip}} ({{data.forwardedIp}})</td>
+        <td *ngIf="!data.forwardedIp">{{data.ip}}</td>
     </tr>
 
     <tr *ngIf="data.role">
